# governance_architecture

./: DESIGN_DOCUMENT.md  pyproject.toml
app/: main.py
app/agents/: __init__.py  base_agent.py  billing_agent.py  care_planning_agent.py  compliance_agent.py  documentation_agent.py  family_communication_agent.py  intake_agent.py  medication_agent.py  orchestrator.py  scheduling_agent.py
app/governance/: __init__.py  audit_trail.py  bias_monitor.py  fallback.py  governance_engine.py  rbac.py  risk_gates.py
app/integrations/: __init__.py  aws_comprehend.py  base.py  canary_speech.py  elevenlabs.py  john_snow_labs.py  twilio_client.py
app/models/: __init__.py  audit.py  base.py  governance.py  patient.py
app/tests/: test_compliance_accuracy.py  test_governance.py  test_intake_accuracy.py
