[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.124.0"}
psycopg = {extras = ["binary"], version = "^3.3.2"}
langchain = "^1.1.2"
langchain-core = "^1.1.1"
pydantic = "^2.12.5"
python-dotenv = "^1.2.1"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
